# gpgpu_computing

./: .gitignore
cs344/lesson1/: Common.h  ImageHandling.h  Makefile  cl_handlers.cpp  cl_kernels.cl  cuda_handlers.cu  main.cpp  test_flags.cpp  utils.h
cs344/lesson2/: Common.h  ImageHandling.h  Makefile  cuda_handlers.cu  main.cpp
samples/: add.cu  test_device.cu
samples/basic/: Makefile  julia_fractal.cu  longVectorAdd.cu  vectorAdd.cu  vectorDotProduct.cu
samples/helpers/: LCommon.cpp  LCommon.h
samples/helpers/img/: LImage.h
samples/intro/: add.cu  test_device.cu
simulations/particle2D/: main.cpp
simulations/particle2D/app/: LParticleWorld2D.h  LWorld2D.h
simulations/particle2D/cuda/: LcudaBase.h  LcudaKernels.cu
simulations/particle2D/gl/: LApp.cpp  LBaseCircle2D.h  LGraphicsObject.h  LScene.h  LSimpleRenderer.h
simulations/particle2D/gl/shaders/: gl_base2d_geometry_shader.glsl
simulations/robot2D/: CMakeCache.txt  CMakeLists.txt  Makefile  common.h  main.cpp  particle2D  test_foo.cpp
simulations/robot2D/app/core/: LWorld2D.h
simulations/robot2D/app/graphics/: LAppGraphics2D.cpp  LAppGraphics2D.h  LGraphicsWorld2D.h
simulations/robot2D/app/particles2D/: LAppParticles2D.cpp  LAppParticles2D.h  LCommonParticles2D.h  LParticlesWorld2D.h
simulations/robot2D/app/particles2D/particleSystem2D/: LCollisionManager2D.h  LCollisionManager2D_opencl.h  LParticleSystem2D.h
simulations/robot2D/app/particles2D/particleSystem2D/cl/: clCollisionKernels.cl  clUtils.h
simulations/robot2D/app/robotics/: LAppRobotics2D.cpp  LAppRobotics2D.h  LCommonRobotics2D.cpp  LCommonRobotics2D.h  LRobotWorld2D.h  LRoboticsMap2D.h  LRoboticsWorld2D.h
simulations/robot2D/app/robotics/robot/: LLinePath.h  LRobot2D.cpp  LRobot2D.h  LRobotLaserSensor.cpp  LRobotLaserSensor.h
simulations/robot2D/app/robotics/robot/localization/: LRobotLocalizer.cpp  LRobotLocalizer.h
simulations/robot2D/cuda/robotics/: LRoboticsCudaHelpers.cu  LRoboticsCudaHelpers.h
simulations/robot2D/gl/: LApp.cpp  LApp.h  LCommonGL.h  LPrimitivesRenderer2D.h  LShaderManager.cpp  LShaderManager.h
simulations/robot2D/gl/core/: LCommonGL.h  LScene.h  LSimpleRenderer.h
simulations/robot2D/gl/core/base/: LBaseObject2D.h  LGraphicsObject.h
simulations/robot2D/gl/core/camera/: LBaseCamera2D.h
simulations/robot2D/gl/core/primitives/: LPrimitive.h  LPrimitiveLine.h  LPrimitivePoint.h  LPrimitiveRect.h  LPrimitivesRenderer2D.cpp  LPrimitivesRenderer2D.h
simulations/robot2D/gl/core/shaders/: LShaderManager.cpp  LShaderManager.h
simulations/robot2D/gl/core/shaders/old/: gl_base2d_fragment_shader.glsl  gl_base2d_vertex_shader.glsl  gl_circle_geometry_shader.glsl  gl_circle_vertex_shader.glsl
simulations/robot2D/gl/core/shaders/primitives/: gl_primitive_circle_geometry_shader.glsl  gl_primitive_line_geometry_shader.glsl  gl_primitive_line_vertex_shader.glsl  gl_primitive_rect_geometry_shader.glsl
simulations/robot2D/gl/core/world/: LWorld2D.h
simulations/robot2D/gl/shaders/: gl_circle_fragment_shader.glsl
simulations/robot2D/gl/shaders/primitives/: gl_primitive_point_geometry_shader.glsl
simulations/robot2D/opencl/robotics/: LopenclHelpers.cpp  LopenclHelpers.h  LopenclKernels.cl
simulations/robot2D/resources/: robo_map_1.txt
